--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
 # Site settings
 title: Hux Blog
-SEOTitle: 黄玄的博客 | Hux Blog
+SEOTitle: 小猛的博客 | Xiao Meng Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
-url: "https://huangxuan.me"              # your host, for absolute URL
-baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+email: 332325258@qq.com
+description: "关于程序与设计 | Software Engineer, Designer | 这里是 @vasutumn小猛的个人博客，与你一起发现更大的世界。"
+keyword: "小猛, 邓小猛, xmeng, vsautumn, xiaomeng, @xmeng, @vsautumn, 小猛的博客, xmeng博客, 博客, 个人网站, 互联网, Web, Java, mysql, 大数据, linux"
+url: "https://xmeng.love2evol.cn"              # your host, for absolute URL
+baseurl: ""                                    # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-twitter_username:   huxpro
-#facebook_username:  huxpro
+weibo_username:     vsautumn
+zhihu_username:     vsautumn
+github_username:    vsautumn
+#twitter_username:   vsautumn
+#facebook_username:  vsautumn
 #linkedin_username:  firstname-lastname-idxxxx
 
 
