--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Hux Blog
-SEOTitle: 小猛的博客 | Xiao Meng Blog
+SEOTitle: 小猛的博客 | xmeng Blog
 header-img: img/home-bg.jpg
 email: 332325258@qq.com
 description: "关于程序与设计 | Software Engineer, Designer | 这里是 @vasutumn小猛的个人博客，与你一起发现更大的世界。"
