--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "hux-blog",
-    "title": "Hux Blog",
-    "author": "Hux <huxpro@gmail.com>",
+    "name": "xmeng-blog",
+    "title": "Xmeng Blog",
+    "author": "Xmeng <332325258@qq.com>",
     "version": "1.7.0",
     "homepage": "http://huxpro.github.io",
     "repository": {
