--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Hux Blog
+title: Xmeng Blog
 SEOTitle: 小猛的博客 | xmeng Blog
 header-img: img/home-bg.jpg
 email: 332325258@qq.com
